fix non-immutable list
Signed-off-by: Pavel Jareš <Pavel.Jares@broadcom.com>